@@ -1,3 +1,9 @@
+2006-01-13  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>
+
+	* fvwm/move_resize.c (GetOnePositionArgument):
+	(GetMoveArguments):
+	new option "screen" to Move type commands
+
 2006-01-08  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* acinclude.m4 (smr_SWITCH):
